# mirror

./: HelloWorld.mm  Makefile  Makefile.am  Makefile.in  Matt.mm  aclocal.m4  config.status  configure  configure.in  libmirror.0  libtool
.libs/: lt-mirror
autom4te.cache/: output.0  requests  traces.0
classes/Collection/: Array.mm  Association.mm  ByteArray.mm  Collection.mm  Dictionary.mm  LinkedList.mm  String.mm  Vector.mm
classes/Core/: .Process.mm.swp  Behavior.mm  (+34 more)
src/: Makefile  Makefile.in
src/lib/: Makefile  Makefile.am  Makefile.in  builtins.c  builtins.lo  bytearray.lo  char.lo  compiler.c  compiler.h  compiler.lo  config.h  config.h.in  config.h.in~  context.lo  dict.c  dict.h  dict.lo  dynload.c  dynload.h  dynload.lo  file.lo  fileconn.lo  float.lo  integer.lo  interp.c  interp.h  interp.lo  libmirror.la  linklst.c  linklst.h  linklst.lo  memory.c  memory.h  memory.lo  mirror.c  mirror.h  mirror.lo  mirror_defs.h  mirror_defs.h.in  mirror_lexer.c  (+20 more)
src/lib/.deps/: builtins.Plo  bytearray.Plo  char.Plo  compiler.Plo  context.Plo  dict.Plo  dynload.Plo  file.Plo  fileconn.Plo  float.Plo  integer.Plo  interp.Plo  linklst.Plo  memory.Plo  mirror.Plo  mirror_lexer.Plo  mirror_lexer.Po  mirror_parser.Plo  object.Plo  os.Plo  primitive.Plo  process.Plo  regexp.Plo  signal.Plo  socket.Plo  string.Plo  time.Plo  tree.Plo
src/lib/.libs/: libmirror  libmirror.0.0.0  libmirror.la  libmirror.lai
src/lib/builtins/: bytearray.c  char.c  context.c  file.c  fileconn.c  float.c  integer.c  object.c  os.c  process.c  regexp.c  signal.c  socket.c  string.c  time.c
(+18 files in other folders)
